Port to 1.21.3